[package]
name = "runng_examples"
version = "0.1.0"
authors = ["Jake W <jeikabu@gmail.com>"]

description = "High-level wrapper around nng (Nanomsg-Next-Generation) aka Nanomsg2"
keywords = ["nng", "nanomsg", "zeromq"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/jeikabu/runng_examples"
readme = "README.md"
edition = "2018"

[dependencies]
backtrace = "0.3"
futures = { version = "0.3.0-alpha", package = "futures-preview" }
log = "0.4"
runng = { version = "0.3", path = "../runng/runng" }

[dev-dependencies]
clap = "2.33"
criterion = "0.2"
env_logger = "0.7"
futures-timer = "0.3"
tokio = { version = "0.2", features = ["full"] }

[[bench]]
name = "reqrep_bench"
harness = false

[[bench]]
name = "pushpull_bench"
harness = false